new proj/src/objects/GE_MCS_SUPP_REQ_CONFIG__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>OPPORTUNITY_NAME__c</fullName>
        <label>OPPORTUNITY_NAME</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REQUESTOR_ID__c</fullName>
        <label>REQUESTOR_ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REQUESTOR_NAME__c</fullName>
        <label>REQUESTOR_NAME</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPPORT_REQUEST_OBJECT__c</fullName>
        <label>SUPPORT_REQUEST_OBJECT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUPPORT_REQUEST_PREFIX__c</fullName>
        <label>SUPPORT_REQUEST_PREFIX</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>GE_MCS_SUPP_REQ_CONFIG</label>
</CustomObject>